--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
-html, body {
+html, body, #root {
   height: 100%;
 }
 
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
 }
