--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -6,6 +6,8 @@
     position: fixed;
     width: 100%;
     height: 100vh;
+    top: 0;
+    left: 0;
     overflow-y: hidden !important;
     background-color: rgba(5, 4, 23, .8);
 }
@@ -13,11 +15,13 @@
 .modal-container .content {
     z-index: 9999;
     position: absolute;
-    display: block;
+    display: flex;
+    flex-direction: column;
     top: 50px;
     background: white;
     color: black;
-    width: 50%;
+    width: 452px;
+    min-width: 50%;
     height: 80%;
     border-radius: 10px; 
 }
