--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -24,4 +24,65 @@
     min-width: 50%;
     height: 80%;
     border-radius: 10px; 
+    line-height: 1.2rem;
+}
+
+.description {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.user-profile {
+  display: flex;
+  align-items: center;
+}
+
+.user-profile a {
+  text-decoration: none;
+  color: inherit;
+  text-align: left;
+}
+
+.user-profile .img-profile {
+  margin: auto;
+  float: left;
+  border-radius: 50%;
+  width: 48px !important;
+}
+
+.user-profile .name {
+  margin-left: .5rem;
+  float: left;
+}
+
+.user-profile .full-name {
+  font-weight: bold;
+  color: #000;
+}
+
+.user-profile .username {
+  color: #2A2B8D;
+}
+
+.btn-download {
+  text-decoration: none;
+  color: rgba(42, 43, 141, .7);
+  border: 2px solid rgba(42, 43, 141, .7);
+  border-radius: 10px;
+  padding: .5rem 1rem;
+  font-weight: bold;
+  line-height: 25px;
+}
+
+.btn-download:hover {
+  color: rgba(42, 43, 141, 1);
+  border-color: rgba(42, 43, 141, 1);
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
 }
