--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -1,46 +1,45 @@
 .modal-container {
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    overflow-y: hidden !important;
-    background-color: rgba(5, 4, 23, .8);
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(5, 4, 23, .8);
 }
 
 .modal-container .modal-content {
-    padding: .3rem;
-    z-index: 9999;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 50px;
-    background: white;
-    color: black;
-    width: 452px;
-    min-width: 50%;
-    border-radius: 10px;
-    line-height: 1.2rem;
+  position: relative;
+  padding: .3rem;
+  display: flex;
+  flex-direction: column;
+  background: white;
+  width: 452px;
+  min-width: 50%;
+  max-width: 960px;
+  max-height: 95%;
+  overflow: auto;
+  border-radius: 10px;
+  line-height: 1.2rem;
 }
 
 .description {
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  line-height: 2.5rem;
 }
 
 /* Extended Image */
 .image-container {
-  width: 100%;
+  max-height: 500px;
 }
 
 .image-container img.img-extended {
+  height: 100% !important;
   width: auto !important;
-  height: auto !important;
 }
 
 /* User Profile Card */
