--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -11,39 +11,7 @@ body {
   color: #fff;
 }
 
-.home form {
-  width: fit-content;
-}
-
-.home form * {
-  /* Put a distance between form elements */
-  margin-top: .5rem;
-  margin-bottom: .5rem;
-  border: none;
-}
-
-.home form input {
-  border-radius: 4px;
-  padding: 10px;
-}
-
-.home form select {
-  border-radius: 4px;
-  padding: 10px;
-  width: 100%;
-}
-
-.home form button {
-  background: rgba(42, 43, 141, .67);
-  color: #fff;
-  font-weight: bold;
-  border: none;
-  border-radius: 25px;
-  text-transform: uppercase;
-  padding: 1rem 4rem;
-}
-
-.home form button:hover {
-  cursor: pointer;
-  background: rgba(42, 43, 141, 1);
+.home-content {
+  max-width: 400px;
+  margin: 1rem;
 }
