--- a/src/components/StickyHeader.css
+++ b/src/components/StickyHeader.css
@@ -1,19 +1,20 @@
 .sticky-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: #050417;
-    color: white;
-    display: block;
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #050417;
+  color: white;
+  display: block;
 }
 
 .sticky-header .brand {
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 1rem;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1rem;
 }
 
 .sticky-header .brand a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
