--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -86,6 +86,10 @@
   line-height: 25px;
 }
 
+.modal-content i {
+  margin-right: .5rem;
+}
+
 .btn-download:hover {
   color: rgba(42, 43, 141, 1);
   border-color: rgba(42, 43, 141, 1);
