--- a/src/components/SearchForm.css
+++ b/src/components/SearchForm.css
@@ -14,6 +14,26 @@ form input, form select {
   height: 50px;
 }
 
+.select-container {
+  position: relative;
+  z-index: 1;
+  max-width: 400px;
+  width: 100%;
+}
+
+.stacked-select {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  margin-left: auto;
+  z-index: -1;
+  background: #D5D7E5;
+  opacity: 0.7;
+  border-radius: 4px;
+  width: 95%;
+  height: 50px;
+}
+
 form button {
   background: rgba(42, 43, 141, .67);
   color: #fff;
@@ -22,6 +42,7 @@ form button {
   border-radius: 25px;
   text-transform: uppercase;
   padding: 1rem 4rem;
+  margin-top: 75px;
 }
 
 form button:hover {
