--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -17,7 +17,6 @@
   display: flex;
   flex-direction: column;
   background: white;
-  width: 452px;
   min-width: 50%;
   max-width: 960px;
   max-height: 95%;
@@ -38,7 +37,8 @@
 }
 
 .image-container img.img-extended {
-  height: 100% !important;
+  height: auto !important;
+  max-height: 500px;
   width: auto !important;
   max-width: 100% !important;
 }
@@ -68,20 +68,28 @@
 }
 
 .user-profile .full-name {
+  font-size: 30px;
+  line-height: 41px;
   font-weight: bold;
   color: #000;
 }
 
 .user-profile .username {
+  font-size: 20px;
+  line-height: 27px;
   color: #2A2B8D;
 }
 
 .btn-download {
+  border: 2px solid rgba(42, 43, 141, .7);
+  height: 60px;
+  width: 200px;
+  border-radius: 10px;
+  box-sizing: border-box;
   text-decoration: none;
   color: rgba(42, 43, 141, .7);
-  border: 2px solid rgba(42, 43, 141, .7);
-  border-radius: 10px;
   padding: .5rem 1rem;
+  font-size: 18px;
   font-weight: bold;
   line-height: 25px;
 }
@@ -100,4 +108,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  flex-wrap: wrap;
+  line-height: 3rem;
 }
