--- a/src/components/SearchForm.css
+++ b/src/components/SearchForm.css
@@ -4,6 +4,8 @@ form * {
   margin-bottom: .5rem;
   border: none;
   box-sizing: border-box;
+  font-size: 14px;
+  line-height: 19px;
 }
 
 form input, form select {
@@ -36,12 +38,14 @@ form input, form select {
 
 form button {
   background: rgba(42, 43, 141, .67);
+  border-radius: 25px;
+  width: 246px;
+  height: 50px;
   color: #fff;
   font-weight: bold;
+  letter-spacing: 0.1em;
   border: none;
-  border-radius: 25px;
   text-transform: uppercase;
-  padding: 1rem 4rem;
   margin-top: 75px;
 }
 
