--- a/src/components/StickyHeader.css
+++ b/src/components/StickyHeader.css
@@ -8,13 +8,46 @@
   display: block;
 }
 
-.sticky-header .brand {
-  font-size: 2rem;
-  font-weight: bold;
-  padding: 1rem;
+.sticky-header-container .logo-container {
+  height: 70px;
+  user-select: none;
+  -moz-user-select: none;
 }
 
-.sticky-header .brand a {
-  color: white;
-  text-decoration: none;
+.sticky-header-container {
+  margin: 25px;
+}
+
+.sticky-header-container, .sticky-header-container form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+form, form * {
+  margin: 0;
+}
+
+.sticky-header-container form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sticky-header-container svg {
+  margin-right: 86px;
+}
+
+.sticky-header-container select {
+  width: 400px;
+}
+
+.sticky-header-container input {
+  width: 400px;
+  margin-right: 30px;
+}
+
+.sticky-header-container button {
+  flex-basis: 246px;
+  margin-left: 52px;
 }
