--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -32,6 +32,7 @@
 }
 
 /* Extended Image */
+
 .image-container {
   max-height: 500px;
 }
@@ -44,6 +45,7 @@
 }
 
 /* User Profile Card */
+
 .user-profile {
   display: flex;
   align-items: center;
@@ -110,4 +112,47 @@
   padding: 1rem;
   flex-wrap: wrap;
   line-height: 3rem;
+}
+
+.map-info, .exif-info {
+  box-sizing: border-box;
+  font-size: 14px;
+  text-align: left;
+  padding-left: 2rem;
+  margin-bottom: .5rem;
+  line-height: 19px;
+  width: 100%;
+}
+
+.map-info i, .exif-info i {
+  width: 20px;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.map-title, .exif-title {
+  font-weight: bold;
+}
+
+.map-content, .exif-content {
+  line-height: 1rem;
+  max-width: 90%;
+  padding-left: 1rem;
+}
+
+.map-info {
+}
+
+.exif-info {
+}
+
+.exif-info .title {
+  font-size: 16px;
+
+border-bottom: 1px solid
+black;
+
+padding-bottom: 0.5rem;
 }
