--- a/src/components/PhotoModal.css
+++ b/src/components/PhotoModal.css
@@ -11,7 +11,8 @@
   background-color: rgba(5, 4, 23, .8);
 }
 
-.modal-container .modal-content {
+.modal-container .modal-content,
+.modal-container .modal-content-wrapper {
   position: relative;
   padding: .3rem;
   display: flex;
@@ -23,6 +24,22 @@
   overflow-y: auto;
   border-radius: 10px;
   line-height: 1.2rem;
+}
+
+/* Modal close button for mobile devices */
+.mobile-btn-close {
+  display: none;
+}
+
+@media screen and (max-width: 476px) {
+  .mobile-btn-close {
+    display: block;
+    z-index: 999;
+    position: absolute;
+    font-size: 1.5rem;
+    top: .2rem;
+    right: .2rem;
+  }
 }
 
 .description {
